<resources>
    <string name="app_name">Connect4</string>
    <string name="dummy">dummy</string>
    <string name="game_start_button">Begin Game!</string>
    <string name="game_desc">Sparty Connect 4</string>
    <string name="game_end_button">End Game</string>
    <string name="test">Test To Make Sure Game Cycles</string>
    <string name="white_piece">White</string>
    <string name="green_piece">Green</string>
    <string name="Player1Txt">Player 1 :</string>
    <string name="Player2Txt">Player 2 :</string>
    <string name="PlayerEnter">(Enter Name)</string>
    <string name="Player1Turns">Player 1"'"s Turn</string>
    <string name="Player2Turns">Player 2"'"s Turn</string>
    <string name="new_game">New Game</string>
    <string name="player_won">Player Won!</string>
    <string name="surrender">Surrender</string>
    <string name="main_image_description">The app icon image</string>
    <string name="done_button">Done</string>
    <string name="Player1DefaultName">Player 1</string>
    <string name="Player2DefaultName">Player 2</string>
    <string name="join_game_instructions">Enter Game Id</string>
    <string name="loginText">Log in to Connect 4</string>
    <string name="user">Username :</string>
    <string name="pass">Password :</string>
    <string name="login">Login</string>
    <string name="noAccount">Don"'"t have an account? Make one&#160;</string>
    <string name="here">here</string>
    <string name="joinGame">Join Game</string>
    <string name="newAccountLabel">Make a new Connect4 account</string>
    <string name="makeAccount">Make Account</string>
    <string name="createGame">Create Game</string>
    <string name="lobbyMsg">Click create game to make a new lobby, or click join to enter an existing lobby</string>
    <string name="joinMsg">Current list of active games to join</string>
    <string name="hostMsg">Lobby hosted by &#160;</string>
    <string name="LoginToast">Login Failed! Create a new account if you don"'"t already have one.</string>
    <string name="instruction_user_password">Enter Username And Password</string>
    <string name="account_fail">Failed to make account</string>
    <string name="loading">Loading…</string>
    <string name="creating_game">Creating Game…</string>
    <string name="catalog_fail">Failed to load active games</string>
    <string name="loading_game">Loading into game</string>
    <string name="join_fail_toast">Failed to join game! Please try again</string>
    <string name="make_move">MAKE MOVE</string>
</resources>